# fraudboost

./: CASCADE_IMPLEMENTATION.md  LICENSE  README.md  RUST_BACKEND_SUMMARY.md  debug_benchmark.py  demo_final.py  demo_rust_performance.py  generate_charts.py  pyproject.toml  requirements.txt  setup.py  simple_test.py  test_benchmark_mini.py  test_cascade_imports.py  test_cascade_mini.py  test_data_loading.py  test_imports.py  test_mini_benchmark.py  test_model_training.py  test_rust_backend.py
benchmarks/: benchmark_cascade.py  benchmark_fast.py  benchmark_final.py  benchmark_kartik.py  benchmark_proper.py  benchmark_proper_final.py  benchmark_proper_v2.py  results_kartik.md  results_proper.md
examples/: basic_usage.py  benchmark_vs_xgboost.py
fraudboost/: __init__.py  _rust_core.py  cascade.py  core.py  drift.py  losses.py  metrics.py  pareto.py  pipeline.py  spectral.py  stacking.py  tree.py
fraudboost.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
notebooks/: cascade_benchmark.ipynb  cascade_benchmark.py  fraudboost_benchmark.py
rust_core/: Cargo.toml
rust_core/src/: booster.rs  lib.rs  tree.rs
tests/: test_core.py  test_losses.py  test_metrics.py  test_pareto.py  test_spectral.py  test_tree.py
