[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraudboost"
version = "0.1.0"
authors = [
    {name = "Alex Shrike", email = "alex@example.com"},
]
description = "A gradient boosting framework purpose-built for fraud detection in fintech"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["machine-learning", "fraud-detection", "gradient-boosting", "fintech", "xgboost", "anomaly-detection"]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]
examples = [
    "xgboost>=1.6.0",
    "jupyter",
    "seaborn",
]
full = [
    "pytest>=6.0",
    "pytest-cov",
    "xgboost>=1.6.0",
    "jupyter",
    "seaborn",
]

[project.urls]
"Homepage" = "https://github.com/AlexShrike/fraudboost"
"Bug Tracker" = "https://github.com/AlexShrike/fraudboost/issues"
"Documentation" = "https://github.com/AlexShrike/fraudboost#readme"
"Source Code" = "https://github.com/AlexShrike/fraudboost"

[tool.setuptools]
packages = ["fraudboost"]

[tool.setuptools.package-data]
fraudboost = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["fraudboost"]
omit = [
    "*/tests/*",
    "*/examples/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]