[package]
name = "fraudboost_rust_core"
version = "0.1.0"
edition = "2021"
description = "High-performance gradient boosting for fraud detection written in Rust with Python bindings"
license = "MIT"

[lib]
name = "fraudboost_rust_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
numpy = "0.27"
ndarray = { version = "0.17", features = ["rayon"] }
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
ordered-float = "4.2"